--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.23.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-nextjs-toast": "^1.2.5",
+    "react-toast-notifications": "^2.5.1"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
