--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-nextjs-toast": "^1.2.5",
-    "react-toast-notifications": "^2.5.1"
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
